# Trajectory_task

./: .env.example  .pylintrc  README.md  compose.yaml  main.py  pyproject.toml  run_tests.py
api/: __init__.py  main_router.py
schemas/: __init__.py  day.py  interval.py  schedule.py  timeslot.py
tests/: conftest.py  test_integration.py  test_schemas.py  test_utils.py
utils/: __init__.py  settings.py  shedules.py  time_manager.py
